<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fillViewport="true"
    tools:context=".presenter.signIn.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kufam_semi_bold"
            android:text="@string/welcome_message"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sp"
            android:fontFamily="@font/kufam_medium"
            android:text="@string/login_back_message"
            android:textColor="@color/grey"
            android:textSize="@dimen/_15sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="45dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_hint"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_hint"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="@dimen/_195dp"
                android:layout_height="@dimen/_48dp"
                android:background="@drawable/login_and_register_button_style"
                app:backgroundTint="@color/white"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/kufam_regular"
                android:layout_marginTop="@dimen/_35dp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kufam_medium"
                android:paddingTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_an_account"
            android:textSize="@dimen/_14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/kufam_medium"
            android:paddingTop="@dimen/_10dp" />

        <TextView
            android:id="@+id/join_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kufam_semi_bold"
            android:text="@string/join_now"
            android:textColor="@color/turquoise"
            android:textSize="@dimen/_14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</ScrollView>